--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>News Aggregator</title>
     <script src ="https://accounts.google.com/gsi/client" async defer></script>
   </head>
-  <body style="margin:2px">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
